<resources>
    <string name="app_name">Story App 2</string>

    <!-- widget -->
    <string name="empty_text">NO DATA</string>
    <string name="app_widget_description">Widget to display stories</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign Up.</string>
    <string name="name">Name</string>
    <string name="have_an_account">Have an account?</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="at_least_6_character">it must have at least 6 characters.</string>
    <string name="invalid_name">Invalid name.</string>
    <string name="tv_placeholder" translatable="false">TextView</string>
    <string name="retry">Retry</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="new_story">New Story</string>
    <string name="story_created_successfully">Story created successfully</string>
    <string name="description_cant_be_empty">Description can\'t\' be empty</string>
    <string name="error_no_image">Please enter the image file first.</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="description_">Description:</string>
    <string name="owner_story">%1$s\'s story</string>
    <string name="update_story">Update Story</string>
    <string name="touched_view">Touched view %1$d</string>
    <string name="add_story">Add Story</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="map_story">Map Story</string>
    <string name="tap_to_open">Tap to open story</string>
    <string name="get_location">Get Location</string>
    <string name="lat_lng" translatable="false">Lat: %1$s, Lng: %2$s</string>
    <string name="location_not_found">Location is not found.</string>
    <string name="cant_get_location_access">No location access granted.</string>
    <string name="lat_lng_plc" translatable="false">Lat: -, Lng: -</string>
    <string name="please_turn_on_location">Please turn on your location.</string>
</resources>